Closed
Bug 727796
Opened 13 years ago
Closed 13 years ago
crash after getting new mail [@ nsMsgDBView::FetchKeywords(nsIMsgDBHdr*, nsACString_internal&) ]
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 13.0
People
(Reporter: wsmwk, Assigned: Bienvenu)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
960 bytes,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
crash after getting new mail [@ nsMsgDBView::FetchKeywords(nsIMsgDBHdr*, nsACString_internal&) ]
Did not attempt to reproduce.
Didn't keep imap log :(
- wake computer from sleep
- get mail
- deleted several multi selected items from Inbox
- attempted to click link in bugmail (it never came up in firefox)
crash
bp-0f6da928-ecc3-41ff-b917-963e62120216
0 xul.dll nsMsgDBView::FetchKeywords mailnews/base/src/nsMsgDBView.cpp:891
1 xul.dll nsMsgDBView::FetchRowKeywords mailnews/base/src/nsMsgDBView.cpp:933
2 xul.dll nsMsgDBView::GetRowProperties mailnews/base/src/nsMsgDBView.cpp:1463
3 xul.dll nsMsgGroupView::GetRowProperties mailnews/base/src/nsMsgGroupView.cpp:759
4 xul.dll nsTreeBodyFrame::PaintRow layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp:2943
5 xul.dll nsTreeBodyFrame::PaintTreeBody layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp:2874
6 xul.dll PaintTreeBody layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp:2799
7 xul.dll nsDisplayGeneric::Paint layout/base/nsDisplayList.h:1309
8 xul.dll mozilla::FrameLayerBuilder::DrawThebesLayer layout/base/FrameLayerBuilder.cpp:2178
9 xul.dll mozilla::layers::BasicThebesLayer::PaintBuffer gfx/layers/basic/BasicLayers.cpp:563
10 xul.dll mozilla::layers::BasicShadowableThebesLayer::PaintBuffer gfx/layers/basic/BasicLayers.cpp:2357
11 xul.dll mozilla::layers::BasicThebesLayer::PaintThebes gfx/layers/basic/BasicLayers.cpp:753
12 xul.dll mozilla::layers::BasicLayerManager::PaintLayer gfx/layers/basic/BasicLayers.cpp:1920
13 xul.dll mozilla::layers::BasicLayerManager::PaintLayer gfx/layers/basic/BasicLayers.cpp:1935
14 xul.dll mozilla::layers::BasicLayerManager::EndTransactionInternal gfx/layers/basic/BasicLayers.cpp:1629
15 xul.dll mozilla::layers::BasicShadowLayerManager::EndTransaction gfx/layers/basic/BasicLayers.cpp:3356
16 xul.dll nsDisplayList::PaintForFrame layout/base/nsDisplayList.cpp:637
17 xul.dll nsDisplayList::PaintRoot layout/base/nsDisplayList.cpp:542
18 xul.dll nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:1809
Reporter | ||
Comment 1•13 years ago
|
||
someone else's crash from v9 bp-b6c63835-946e-43a5-9382-e01c12120124
crashed when I closed a sheet(that has been opened automatically when I searched a message with the function search all messages
Assignee | ||
Comment 2•13 years ago
|
||
the hdr is null, which is surprising but easy to check for.
Assignee | ||
Comment 3•13 years ago
|
||
Assignee: nobody → dbienvenu
Attachment #597953 -
Flags: review?(neil)
Updated•13 years ago
|
Attachment #597953 -
Flags: review?(neil) → review+
Assignee | ||
Comment 4•13 years ago
|
||
fixed on trunk - http://hg.mozilla.org/comm-central/rev/4f7b194ab8fa
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 13.0
You need to log in
before you can comment on or make changes to this bug.
Description
•