fix crash getting keywords for null headers, bullet proof fix, r=neil, bug 727796